{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 14,
  "lineage": "5a951a73-a0c4-cab0-031c-280e9b713058",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "website_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.224.4.40",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-04T09:46:00.405-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/portfolio-452713/regions/us-central1/addresses/website-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "website-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "portfolio-452713",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/regions/us-central1/addresses/website-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-04T09:45:58.275-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/portfolio-452713/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/global/networks/default",
            "priority": 1000,
            "project": "portfolio-452713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 6401345631891915994,
            "id": "projects/portfolio-452713/global/forwardingRules/http-rule",
            "ip_address": "34.160.250.119",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "portfolio-452713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/global/forwardingRules/http-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/global/targetHttpProxies/http-proxy"
          },
          "dependencies": [
            "google_compute_address.website_ip",
            "google_compute_backend_bucket.backend",
            "google_compute_target_http_proxy.http",
            "google_compute_url_map.website",
            "google_storage_bucket.website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-04T09:36:41.336-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/portfolio-452713/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "portfolio-452713",
            "proxy_bind": false,
            "proxy_id": 3111217751908844742,
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/global/urlMaps/website-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.backend",
            "google_compute_url_map.website",
            "google_storage_bucket.website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-04T09:36:29.079-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/global/backendBuckets/backend-bucket",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Qxuo1nrabcg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/portfolio-452713/global/urlMaps/website-map",
            "map_id": 4982848904755840242,
            "name": "website-map",
            "path_matcher": [],
            "project": "portfolio-452713",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-452713/global/urlMaps/website-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.backend",
            "google_storage_bucket.website"
          ]
        }
      ]
    }
  ]
}